language/tests/regent/compile_fail/type_mismatch_call_terra_method2.rg
-- Copyright 2024 Stanford University
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

-- fails-with:
-- type_mismatch_call_terra_method2.rg:28: invalid method call for s:f(int32, int32)
--   x:f(0, 1)
--   ^

import "regent"

struct s {}

terra s:f(x : int)
end

task g(x : s)
  x:f(0, 1)
end
g:compile()
